 * client Changes
  * permit to force init of session by using init()
 
 * adds
  * 

 * libraries Changes
  * RAS