@@ -1,4 +1,4 @@
 COPYING
 README.md
 CHANGES
-CHANGES-1.0.6
+CHANGES-1.0.7
