@@ -1,5 +1,6 @@
  * client Changes
   * permit to force init of session by using init()
+  * catch Exception on logout
  
  * adds
   * 
